--- a/charts/microservice-chart/templates/deployments.yaml
+++ b/charts/microservice-chart/templates/deployments.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.deployment.create -}}
+{{- $root := . }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -154,7 +155,7 @@ spec:
             {{- if .Values.configMapFromFile }}
             {{- range $key, $val := .Values.configMapFromFile }}
             - name: file-config
-              mountPath: "/mnt/file-config/{{ $key }}"
+              mountPath: "{{ $root.Values.configMapFromFileCustomPath }}/{{ $key }}"
               subPath: {{ $key }}
               readOnly: true
             {{- end }}
@@ -162,7 +163,11 @@ spec:
             {{- if .Values.externalConfigMapFiles.create }}
             {{- range $i, $v := .Values.externalConfigMapFiles.configMaps }}
             - name: {{ $v.name }}-{{ $i }}
-              mountPath: "/mnt/file-config-external/{{ $v.name }}/{{ $v.key }}"
+              {{- if $v.mountPath }}
+              mountPath: "{{ $v.mountPath }}"
+              {{- else }}
+              mountPath: "{{ $root.Values.externalConfigMapFilesCustomPath}}/{{ $v.name }}/{{ $v.key }}"
+              {{- end }}
               subPath: {{ $v.key }}
               readOnly: true
             {{- end }}
