--- a/charts/microservice-chart/values.yaml
+++ b/charts/microservice-chart/values.yaml
@@ -151,8 +151,10 @@ envConfig: {}
 # -- Load secrets as environment variables from kv
 envSecret: {}
 
-# -- Configure files to mount as config maps
+# -- Configure files to mount as config map. This files definition are inside the values*.yaml file
 configMapFromFile: {}
+# -- CustomPath to allow to choose where to put your files
+configMapFromFileCustomPath: "/mnt/file-config"
 
 # -- Environment config from k8s metadata
 envFieldRef: {}
@@ -161,8 +163,11 @@ envFieldRef: {}
 # @default -- {}
 externalConfigMapFiles:
   create: false
-  # -- (list) Config maps to mount as files: e.g. [{name: "configmap", key: "user.xml"}]
+  # -- (list) Config maps to mount as files: e.g. [{name: "configmap", key: "user.xml", mountPath: "/config/user.xml" }]
   configMaps: []
+# -- CustomPath to allow to choose where to put your files
+externalConfigMapFilesCustomPath: "/mnt/file-config-external"
+
 
 externalConfigMapValues:
   # -- (list) Config maps to mount as files: e.g. [{name: "configmap", key: "mykey"}]
@@ -172,7 +177,7 @@ externalConfigMapValues:
 # Volumes
 #
 
-# -- Configure mounted volumes with secrets needed to mount them
+# -- Configure how secrets taken from SecretS storage Class are mounted inside the pod
 # @default -- {}
 providedVolumeMount:
   create: false
@@ -187,7 +192,7 @@ tmpVolumeMount:
     - name: tmp
       mountPath: /tmp
 
-# -- Configure optional volume that mount using a PVC
+# -- Configure optional volume that will be mount (using a PVC)
 persistentVolumeClaimsMounts:
   create: false
   # -- (list) Mounts with pvc volume: (e.g. [{name: "tmp", mountPath: "/tmp", pvcName: "xyz"}]])
