--- a/tests/v5-java-helm-basic-test/helm/values-devopslab-dev.yaml
+++ b/tests/v5-java-helm-basic-test/helm/values-devopslab-dev.yaml
@@ -11,6 +11,7 @@ microservice-chart:
 
   envSecret:
     MY_KV_SECRET: dvopla-d-itn-dev-aks-apiserver-url
+    TEST: test
 
   image:
     repository: ghcr.io/pagopa/devops-java-springboot-color
@@ -67,7 +68,7 @@ microservice-chart:
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
   podDisruptionBudget:
-    create: true
+    create: false
     minAvailable: 1
 
   affinity:
