--- a/tests/v5-java-helm-complete-test-canary/helm/values-devopslab-dev.yaml
+++ b/tests/v5-java-helm-complete-test-canary/helm/values-devopslab-dev.yaml
@@ -122,7 +122,7 @@ microservice-chart:
           value: "60"
 
   podDisruptionBudget:
-    create: true
+    create: false
     minAvailable: 1
 
   keyvault:
