added workloadIdentity Labels

--- a/charts/microservice-chart/values.yaml
+++ b/charts/microservice-chart/values.yaml
@@ -388,3 +388,6 @@ podDisruptionBudget:
   minAvailable: 0
   # -- (mutually exclusive with minAvailable) Max number of pods unavailable before destroy node
   maxUnavailable: ""
+
+azure:
+  workloadIdentityEnabled: true
