added workloadIdentity client id info

--- a/charts/microservice-chart/templates/secretproviderclass-kv.yaml
+++ b/charts/microservice-chart/templates/secretproviderclass-kv.yaml
@@ -30,9 +30,8 @@ spec:
       {{- end }}
       {{- end }}
   parameters:
-    usePodIdentity: "true"
-    useVMManagedIdentity: "false"
-    userAssignedIdentityID: ""
+    usePodIdentity: "false"
+    clientID: {{ .Values.azure.workloadIdentityClientId }}
     keyvaultName: {{ .Values.keyvault.name }}
     tenantId: {{ .Values.keyvault.tenantId }}
     cloudName: ""
