--- a/charts/microservice-chart/values.yaml
+++ b/charts/microservice-chart/values.yaml
@@ -390,4 +390,7 @@ podDisruptionBudget:
   maxUnavailable: ""
 
 azure:
+  # -- (bool) Enabled Labels and configuration for workload identity
   workloadIdentityEnabled: true
+  # -- Workload Identity Client ID (e.g. qwerty123-a1aa-1234-xyza-qwerty123)
+  workloadIdentityClientId: ""
