fix bool with string

--- a/tests/v5-java-helm-basic-test/helm/values-devopslab-dev.yaml
+++ b/tests/v5-java-helm-basic-test/helm/values-devopslab-dev.yaml
@@ -14,7 +14,7 @@ microservice-chart:
     TEST: test
 
   serviceAccount:
-    create: true
+    create: false
     name: testit-workload-identity
 
   image:
