--- a/tests/v5-java-helm-complete-test-foo/helm/values-devopslab-dev.yaml
+++ b/tests/v5-java-helm-complete-test-foo/helm/values-devopslab-dev.yaml
@@ -5,6 +5,9 @@ microservice-chart:
     create: true
     replicas: 1
 
+  serviceAccount:
+    name: testit-workload-identity
+
   envConfig:
     APP: foo
     MY_APP_COLOR: "green"
@@ -86,11 +89,6 @@ microservice-chart:
     path: /testit/v5-java-helm-complete-test-foo(/|$)(.*)
     rewriteTarget: /$2
     servicePort: 8080
-
-  serviceAccount:
-    create: false
-    annotations: {}
-    name: ""
 
   podAnnotations: {}
 
