--- a/charts/microservice-chart/values.yaml
+++ b/charts/microservice-chart/values.yaml
@@ -19,6 +19,8 @@ deployment:
   replicas: 1
   # -- (bool) Force redeploy container
   forceRedeploy: false
+  # -- (int) Number of revision/replicaSet to have has history + 1 current revision
+  revisionHistoryLimit: 3
 
 # -- strategy type for deployment: Recreate or RollingUpdate
 # @default -- {}
