--- a/charts/microservice-chart/templates/deployments.yaml
+++ b/charts/microservice-chart/templates/deployments.yaml
@@ -22,7 +22,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- if .Values.forceRedeploy }}
+        {{- if .Values.deployment.forceRedeploy }}
         redeploy: {{ now | unixEpoch | quote }}
         {{- end }}
         {{- include "microservice-chart.selectorLabels" . | nindent 8 }}
