--- a/tests/v5-java-helm-basic-test/helm/values-devopslab-dev.yaml
+++ b/tests/v5-java-helm-basic-test/helm/values-devopslab-dev.yaml
@@ -4,6 +4,7 @@ microservice-chart:
   deployment:
     create: true
     replicas: 1
+    forceRedeploy: true
 
   serviceAccount:
     name: testit-workload-identity
