--- a/.github/workflows/pre-commit-checks.yml
+++ b/.github/workflows/pre-commit-checks.yml
@@ -33,7 +33,7 @@ jobs:
         # v4.2.0 - https://github.com/Azure/setup-helm/releases/tag/v4.2.0
         uses: azure/setup-helm@fe7b79cd5ee1e45176fcad797de68ecaf3ca4814
         with:
-          version: 'latest'
+          version: 'v3.16.3'
 
       - name: Add helm repositories
         run: |
