--- a/.github/workflows/pre-commit-checks.yml
+++ b/.github/workflows/pre-commit-checks.yml
@@ -29,6 +29,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install pre-commit
 
+      - name: Install helm-docs
+        run: |
+          curl -L https://github.com/norwoodj/helm-docs/releases/download/v1.14.2/helm-docs_1.14.2_Linux_x86_64.tar.gz | tar xz
+          sudo mv helm-docs /usr/local/bin/helm-docs
+          helm-docs --version
+
       - name: Set up Helm
         # v4.2.0 - https://github.com/Azure/setup-helm/releases/tag/v4.2.0
         uses: azure/setup-helm@fe7b79cd5ee1e45176fcad797de68ecaf3ca4814
