--- a/.github/workflows/pre-commit-checks.yml
+++ b/.github/workflows/pre-commit-checks.yml
@@ -56,3 +56,5 @@ jobs:
       - name: Run pre-commit on all files
         run: pre-commit run --all-files
         continue-on-error: false
+        env:
+          FORCE_COLOR: "1"
