--- a/.github/workflows/pre-commit-checks.yml
+++ b/.github/workflows/pre-commit-checks.yml
@@ -3,6 +3,8 @@ name: 🔎 Pre-commit Checks
 on:
   pull_request:
   push:
+    branches:
+      - main
   # Allow manual trigger from GitHub UI
   workflow_dispatch:
 
