--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,39 @@
 repos:
   - repo: https://github.com/norwoodj/helm-docs
-    rev: v1.13.1
+    rev: v1.14.2
     hooks:
       - id: helm-docs
         args:
           # Make the tool search for charts only under the `example-charts` directory
           - --chart-search-root=charts/microservice-chart
-  - repo: https://github.com/gruntwork-io/pre-commit
-    rev: v0.1.23 # Get the latest from: https://github.com/gruntwork-io/pre-commit/releases
+  ## general
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v5.0.0
     hooks:
-      - id: helmlint
+      # Common errors
+      - id: end-of-file-fixer
+        exclude_types: [sql]
+      - id: trailing-whitespace
+        args: [--markdown-linebreak-ext=md]
+        exclude_types: [sql, markdown]
+      - id: check-yaml
+        exclude: charts
+        args:
+          - --unsafe
+      - id: check-executables-have-shebangs
+      # Cross platform
+      - id: check-case-conflict
+      - id: mixed-line-ending
+        args: [--fix=lf]
+        exclude_types: [sql]
+      # Security
+      - id: detect-aws-credentials
+        args: ['--allow-missing-credentials']
+      - id: detect-private-key
+  - repo: local
+    hooks:
+      - id: helm ct-lint
+        name: Helm Chart Testing Lint
+        entry: bash -c "ct lint --config ct.yaml --all --lint-conf ct.yaml"
+        language: system
+        pass_filenames: false
