--- a/tests/v5-java-helm-complete-test-canary/helm/values-devopslab-dev.yaml
+++ b/tests/v5-java-helm-complete-test-canary/helm/values-devopslab-dev.yaml
@@ -40,7 +40,7 @@ microservice-chart:
 
   image:
     repository: ghcr.io/pagopa/devops-java-springboot-color
-    tag: 0.10.0
+    tag: develop-1.8.0
     pullPolicy: Always
 
   tmpVolumeMount:
