fix cron trigger keda to zero

--- a/tests/v5-java-helm-complete-test-foo/helm/values-devopslab-dev.yaml
+++ b/tests/v5-java-helm-complete-test-foo/helm/values-devopslab-dev.yaml
@@ -3,7 +3,6 @@ microservice-chart:
 
   deployment:
     create: true
-    replicas: 1
 
   serviceAccount:
     name: testit-workload-identity
@@ -43,7 +42,7 @@ microservice-chart:
 
   image:
     repository: ghcr.io/pagopa/devops-java-springboot-color
-    tag: develop-1.8.0
+    tag: latest
     pullPolicy: Always
 
   tmpVolumeMount:
@@ -102,18 +101,25 @@ microservice-chart:
   resources:
     requests:
       memory: "256Mi"
-      cpu: "40m"
+      cpu: "100m"
     limits:
-      memory: "256Mi"
-      cpu: "150m"
+      memory: "512Mi"
+      cpu: "300m"
 
   autoscaling:
     enable: true
-    minReplica: 2
-    maxReplica: 2
+    minReplica: 0
+    maxReplica: 1
     pollingInterval: 30 # seconds
-    cooldownPeriod: 300 # seconds
+    cooldownPeriod: 10 # seconds
     triggers:
+      - type: cron
+        metadata:
+          # Required
+          timezone: Europe/Rome  # The acceptable values would be a value from the IANA Time Zone Database.
+          start: 0 7 * * *
+          end: 0 21 * * *
+          desiredReplicas: "1"
       - type: cpu
         metadata:
           type: Utilization
