chore: PAYMCLOUD-194-keda-studio-configurazione-con-zero-pod (#132)
* updated test image for color

* basic: added cron trigger

* updated chart

* fix resources for base

* fix cron trigger keda to zero

* pre-commit fixs

--- a/tests/v5-java-helm-basic-test/helm/values-devopslab-dev.yaml
+++ b/tests/v5-java-helm-basic-test/helm/values-devopslab-dev.yaml
@@ -6,6 +6,38 @@ microservice-chart:
     replicas: 1
     forceRedeploy: true
 
+  image:
+    repository: ghcr.io/pagopa/devops-java-springboot-color
+    tag: latest
+    pullPolicy: Always
+
+  resources:
+    requests:
+      memory: "256Mi"
+      cpu: "100m"
+    limits:
+      memory: "512Mi"
+      cpu: "300m"
+
+  autoscaling:
+    enable: true
+    minReplica: 0
+    maxReplica: 1
+    pollingInterval: 30 # seconds
+    cooldownPeriod: 10 # seconds
+    triggers:
+      - type: cron
+        metadata:
+          # Required
+          timezone: Europe/Rome  # The acceptable values would be a value from the IANA Time Zone Database.
+          start: 0 7 * * *
+          end: 0 21 * * *
+          desiredReplicas: "1"
+      - type: cpu
+        metadata:
+          type: Utilization
+          value: "60"
+
   serviceAccount:
     name: testit-workload-identity
 
@@ -16,11 +48,6 @@ microservice-chart:
   envSecret:
     MY_KV_SECRET: dvopla-d-itn-dev-aks-apiserver-url
     TEST: test
-
-  image:
-    repository: ghcr.io/pagopa/devops-java-springboot-color
-    tag: 0.10.0@sha256:3d448ec474944068f5a907a81d399cc00e9e54d42b386b55985451fcf6bf1c90
-    pullPolicy: Always
 
   tmpVolumeMount:
     create: true
@@ -58,14 +85,6 @@ microservice-chart:
     path: /testit/v5-java-helm-basic-test(/|$)(.*)
     rewriteTarget: /$2
     servicePort: 8080
-
-  resources:
-    requests:
-      memory: "256Mi"
-      cpu: "40m"
-    limits:
-      memory: "256Mi"
-      cpu: "150m"
 
   keyvault:
     name: "dvopla-d-itn-testit-kv"
