Update ServiceMonitor API version to azmonitoring.coreos.com
Changed the API version from monitoring.coreos.com/v1 to azmonitoring.coreos.com/v1 in the ServiceMonitor template. This ensures compatibility with the updated monitoring system. No other functionality was altered.

--- a/charts/microservice-chart/templates/service-monitor.yaml
+++ b/charts/microservice-chart/templates/service-monitor.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.serviceMonitor.create -}}
-apiVersion: monitoring.coreos.com/v1
+apiVersion: azmonitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: {{ include "microservice-chart.fullname" . }}
