Add support for Prometheus-managed ServiceMonitor API version
Introduce a `prometheusManaged` flag to differentiate between the Prometheus-managed and default ServiceMonitor API versions. Update `values.yaml`, template, and documentation to reflect this new configuration.

--- a/charts/microservice-chart/templates/service-monitor.yaml
+++ b/charts/microservice-chart/templates/service-monitor.yaml
@@ -1,5 +1,9 @@
 {{- if .Values.serviceMonitor.create -}}
+{{- if .Values.serviceMonitor.prometheusManaged -}}
 apiVersion: azmonitoring.coreos.com/v1
+{{- else }}
+apiVersion: monitoring.coreos.com/v1
+{{- end }}
 kind: ServiceMonitor
 metadata:
   name: {{ include "microservice-chart.fullname" . }}
