--- a/charts/microservice-chart/values.yaml
+++ b/charts/microservice-chart/values.yaml
@@ -317,6 +317,7 @@ serviceMonitor:
   # -- (bool) Create or not the service monitor
   create: false
   endpoints: []
+  prometheusManaged: false
 
 service:
   # -- (bool) create the service manifest
