feat: [PAYMCLOUD-270] Update ServiceMonitor API version for managed prometheus migration (#134)
* Update ServiceMonitor API version to azmonitoring.coreos.com

Changed the API version from monitoring.coreos.com/v1 to azmonitoring.coreos.com/v1 in the ServiceMonitor template. This ensures compatibility with the updated monitoring system. No other functionality was altered.

* Upgrade chart version to 7.4.0

Bumped the Helm chart version from 7.3.1 to 7.4.0 in Chart.yaml and README.md. This ensures proper version tracking for the updated release. No functional changes were introduced.

* Add support for Prometheus-managed ServiceMonitor API version

Introduce a `prometheusManaged` flag to differentiate between the Prometheus-managed and default ServiceMonitor API versions. Update `values.yaml`, template, and documentation to reflect this new configuration.

* Add ServiceMonitor enhancements and Azure Prometheus support.

Introduced `serviceMonitor.prometheusManaged` flag and extended API version compatibility to support Azure Prometheus Managed. Updated README with detailed configuration examples for ServiceMonitor, enabling better application monitoring and integration with managed Prometheus setups.

--- a/charts/microservice-chart/values.yaml
+++ b/charts/microservice-chart/values.yaml
@@ -317,6 +317,8 @@ serviceMonitor:
   # -- (bool) Create or not the service monitor
   create: false
   endpoints: []
+  # -- (bool) Enable the compatibility with Azure Prometheus Managed
+  prometheusManaged: false
 
 service:
   # -- (bool) create the service manifest
