--- a/charts/microservice-chart/templates/autoscaling.yaml
+++ b/charts/microservice-chart/templates/autoscaling.yaml
@@ -30,10 +30,8 @@ spec:
       {{- if .metricType }}
       metricType: {{ .metricType }}
       {{- end }}
-      {{- if ne $.Values.autoscaling.authentication.provider "none" }}
       authenticationRef:
         name: {{ include "microservice-chart.fullname" $ }}
-      {{- end }}
       metadata:
         {{- .metadata | toYaml | nindent 8 }}
     {{- end }}
@@ -44,6 +42,7 @@ spec:
     {{- end }}
     {{- if .Values.autoscaling.advanced.horizontalPodAutoscalerConfig }}
     horizontalPodAutoscalerConfig:
+      #name: keda-hpa-{{ include "microservice-chart.fullname" $ }}
       behavior:
         {{- .Values.autoscaling.advanced.horizontalPodAutoscalerConfig.behavior | toYaml | nindent 8 }}
     {{- end }}
