feat: Keda TriggerAuthentication podIdentity.provider = none (#139)
* feat: Enhance autoscaling configuration with authentication options

* fix: Correct podIdentity condition for autoscaling authentication

* removed chart locks

* updated chart to 7.4.0

* added Chart-lock to gitignore

* fixed pod identity provider to none

* added Chart-lock to gitignore

* removed autoscaling configuration

* changed tests folders to v7 from v5

* changed tests folders to v7 from v5

* minor fix

* pre-commit fixs

* Added changelog and docs

--- a/charts/microservice-chart/templates/autoscaling.yaml
+++ b/charts/microservice-chart/templates/autoscaling.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: {{ .Values.namespace }}
 spec:
   podIdentity:
-    provider: azure
+    provider: none
 ---
 apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
