--- a/tests/v7-java-helm-complete-test-bar/helm/values-devopslab-dev.yaml
+++ b/tests/v7-java-helm-complete-test-bar/helm/values-devopslab-dev.yaml
@@ -8,7 +8,7 @@ microservice-chart:
     name: testit-workload-identity
 
   envConfig:
-    APP: foo
+    APP: bar
     MY_APP_COLOR: "green"
 
   envSecret:
@@ -17,17 +17,16 @@ microservice-chart:
   externalConfigMapFiles:
     create: true
     configMaps:
-      - name: v5-complete-foo-configmap-files
+      - name: v7-complete-bar-configmap-files
         key: game.properties
-        mountPath: "/config/game.properties"
-      - name: v5-complete-foo-configmap-files
+      - name: v7-complete-bar-configmap-files
         key: user-interface.xml
 
   externalConfigMapValues:
-    v5-complete-foo-external-configmap-values-1:
+    v7-complete-bar-external-configmap-values-1:
       DATABASE_DB_NANE: database-db-name
 
-    v5-complete-foo-external-configmap-values-2:
+    v7-complete-bar-external-configmap-values-2:
       PLAYER-INITIAL-LIVES: player-initial-lives
       UI_PROPERTIES_FILE_NAME: ui-properties-file-name
 
@@ -44,59 +43,6 @@ microservice-chart:
     repository: ghcr.io/pagopa/devops-java-springboot-color
     tag: latest
     pullPolicy: Always
-
-  tmpVolumeMount:
-    create: true
-    mounts:
-      - name: tmp
-        mountPath: /tmp
-      - name: logs
-        mountPath: /app/logs
-
-  persistentVolumeClaimsMounts:
-    create: true
-    mounts:
-      - name: csv
-        mountPath: /csv
-        pvcName: testit-file-share-zrs
-
-  livenessProbe:
-    httpGet:
-      path: /status/live
-      port: 8080
-    initialDelaySeconds: 30
-    failureThreshold: 6
-    periodSeconds: 10
-
-  readinessProbe:
-    httpGet:
-      path: /status/ready
-      port: 8080
-    initialDelaySeconds: 30
-    failureThreshold: 6
-    periodSeconds: 10
-
-  service:
-    create: true
-    type: ClusterIP
-    ports:
-      - 8080
-
-  ingress:
-    create: true
-    host: testit.itn.internal.devopslab.pagopa.it
-    path: /testit/v5-java-helm-complete-test-foo(/|$)(.*)
-    rewriteTarget: /$2
-    servicePort: 8080
-
-  podAnnotations: {}
-
-  podSecurityContext:
-    seccompProfile:
-      type: RuntimeDefault
-
-  securityContext:
-    allowPrivilegeEscalation: false
 
   resources:
     requests:
@@ -125,6 +71,83 @@ microservice-chart:
           type: Utilization
           value: "60"
 
+  tmpVolumeMount:
+    create: true
+    mounts:
+      - name: tmp
+        mountPath: /tmp
+      - name: logs
+        mountPath: /app/logs
+
+  persistentVolumeClaimsMounts:
+    create: true
+    mounts:
+      - name: csv
+        mountPath: /csv
+        pvcName: testit-file-share-zrs
+
+  # container:
+  #   command: ["printenv"]
+  #   args: ["HOSTNAME", "KUBERNETES_PORT"]
+
+  livenessProbe:
+    httpGet:
+      path: /status/live
+      port: 8080
+    initialDelaySeconds: 10
+    failureThreshold: 6
+    periodSeconds: 10
+    timeoutSeconds: 1
+    successThreshold: 1
+    terminationGracePeriodSeconds: 30
+
+  readinessProbe:
+    httpGet:
+      path: /status/ready
+      port: 8080
+    initialDelaySeconds: 30
+    failureThreshold: 6
+    periodSeconds: 10
+    timeoutSeconds: 1
+    successThreshold: 1
+
+  startupProbe:
+    create: true
+    handlerType: "exec"
+    exec:
+      command: ["/bin/sh", "-c", '[ -d "/csv" ]']
+    httpGet:
+      path: /status/ready
+      port: 8080
+    initialDelaySeconds: 1
+    failureThreshold: 6
+    periodSeconds: 10
+    timeoutSeconds: 10
+    successThreshold: 1
+    terminationGracePeriodSeconds: 30
+
+  service:
+    create: true
+    type: ClusterIP
+    ports:
+      - 8080
+
+  ingress:
+    create: true
+    host: testit.itn.internal.devopslab.pagopa.it
+    path: /testit/v7-java-helm-complete-test-bar(/|$)(.*)
+    rewriteTarget: /$2
+    servicePort: 8080
+
+  podAnnotations: {}
+
+  podSecurityContext:
+    seccompProfile:
+      type: RuntimeDefault
+
+  securityContext:
+    allowPrivilegeEscalation: false
+
   podDisruptionBudget:
     create: false
     minAvailable: 1
@@ -135,7 +158,11 @@ microservice-chart:
 
   # nodeSelector: {}
 
-  # tolerations: []
+  tolerations:
+    - effect: "NoSchedule"
+      key: "paymentWalletOnly"
+      operator: "Equal"
+      value: "true"
 
   affinity:
     nodeAffinity:
