--- a/charts/microservice-chart/templates/deployments.yaml
+++ b/charts/microservice-chart/templates/deployments.yaml
@@ -324,4 +324,8 @@ spec:
   strategy:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+  {{- if .Values.deployment.topologySpreadConstraints }}
+  topologySpreadConstraints:
+    {{- toYaml .Values.deployment.topologySpreadConstraints | nindent 8 }}
+  {{- end }}
 {{- end }}
