--- a/tests/v7-java-helm-basic-test/helm/values-devopslab-dev.yaml
+++ b/tests/v7-java-helm-basic-test/helm/values-devopslab-dev.yaml
@@ -5,6 +5,19 @@ microservice-chart:
     create: true
     replicas: 1
     forceRedeploy: true
+    topologySpreadConstraints:
+    - maxSkew: 1
+      topologyKey: topology.kubernetes.io/zone
+      whenUnsatisfiable: DoNotSchedule
+      labelSelector:
+        matchLabels:
+          app.kubernetes.io/instance: v7-java-helm-basic-test
+    - maxSkew: 1
+      topologyKey: kubernetes.io/hostname
+      whenUnsatisfiable: DoNotSchedule
+      labelSelector:
+        matchLabels:
+          app.kubernetes.io/instance: v7-java-helm-basic-test
 
   image:
     repository: ghcr.io/pagopa/devops-java-springboot-color
