--- a/charts/microservice-chart/templates/deployments.yaml
+++ b/charts/microservice-chart/templates/deployments.yaml
@@ -28,6 +28,16 @@ spec:
         {{- include "microservice-chart.selectorLabels" . | nindent 8 }}
         {{- include "microservice-chart.extraLabels" . | nindent 8 }}
     spec:
+      {{- with .Values.deployment.topologySpreadConstraints }}
+      {{- if and .create (or .useDefaultConfiguration (gt (len .config) 0)) }}
+      topologySpreadConstraints:
+        {{- if .useDefaultConfiguration }}
+        {{- include "microservice-chart.defaultTopologySpreadConstraints" $root | nindent 8 }}
+        {{- else if .config }}
+        {{- toYaml .config | nindent 8 }}
+        {{- end }}
+      {{- end }}
+      {{- end }}
       automountServiceAccountToken: false
       serviceAccountName: {{ include "microservice-chart.serviceAccountName" . }}
       securityContext:
@@ -319,10 +329,6 @@ spec:
       {{- with .Values.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- if .Values.deployment.topologySpreadConstraints }}
-      topologySpreadConstraints:
-      {{- toYaml .Values.deployment.topologySpreadConstraints | nindent 6 }}
       {{- end }}
   {{- with .Values.strategy }}
   strategy:
