feat: Added Deployment topologySpreadConstraints to manage pod balance (#141)
* added readme and changelog

* added topologySpreadConstraints to deployment

* fix topologySpreadConstraints inside pod

* minor fix

* added new default configuration

* added default values for tests

* improve README

* updated docs

--- a/charts/microservice-chart/templates/deployments.yaml
+++ b/charts/microservice-chart/templates/deployments.yaml
@@ -28,6 +28,16 @@ spec:
         {{- include "microservice-chart.selectorLabels" . | nindent 8 }}
         {{- include "microservice-chart.extraLabels" . | nindent 8 }}
     spec:
+      {{- with .Values.deployment.topologySpreadConstraints }}
+      {{- if and .create (or .useDefaultConfiguration (gt (len .config) 0)) }}
+      topologySpreadConstraints:
+        {{- if .useDefaultConfiguration }}
+        {{- include "microservice-chart.defaultTopologySpreadConstraints" $root | nindent 8 }}
+        {{- else if .config }}
+        {{- toYaml .config | nindent 8 }}
+        {{- end }}
+      {{- end }}
+      {{- end }}
       automountServiceAccountToken: false
       serviceAccountName: {{ include "microservice-chart.serviceAccountName" . }}
       securityContext:
