--- a/tests/v7-java-helm-basic-test/helm/values-devopslab-dev.yaml
+++ b/tests/v7-java-helm-basic-test/helm/values-devopslab-dev.yaml
@@ -5,6 +5,26 @@ microservice-chart:
     create: true
     replicas: 1
     forceRedeploy: true
+    topologySpreadConstraints:
+      create: true
+      useDefaultConfiguration: true
+      # config:
+      #   - labelSelector:
+      #     matchLabels:
+      #       app.kubernetes.io/instance: v7-java-helm-basic-test
+      #     maxSkew: 1
+      #     topologyKey: kubernetes.io/hostname
+      #     whenUnsatisfiable: DoNotSchedule
+
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+        - matchExpressions:
+          - key: kubernetes.azure.com/mode
+            operator: In
+            values:
+            - user
 
   image:
     repository: ghcr.io/pagopa/devops-java-springboot-color
@@ -21,18 +41,18 @@ microservice-chart:
 
   autoscaling:
     enable: true
-    minReplica: 0
-    maxReplica: 3
+    minReplica: 5
+    maxReplica: 5
     pollingInterval: 30 # seconds
     cooldownPeriod: 10 # seconds
     triggers:
-      - type: cron
-        metadata:
-          # Required
-          timezone: Europe/Rome  # The acceptable values would be a value from the IANA Time Zone Database.
-          start: 0 7 * * *
-          end: 0 21 * * *
-          desiredReplicas: "1"
+      # - type: cron
+      #   metadata:
+      #     # Required
+      #     timezone: Europe/Rome  # The acceptable values would be a value from the IANA Time Zone Database.
+      #     start: 0 7 * * *
+      #     end: 0 21 * * *
+      #     desiredReplicas: "1"
       - type: cpu
         metadata:
           type: Utilization
@@ -89,26 +109,3 @@ microservice-chart:
   keyvault:
     name: "dvopla-d-itn-testit-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
-
-  podDisruptionBudget:
-    create: false
-    minAvailable: 1
-
-  affinity:
-    nodeAffinity:
-      requiredDuringSchedulingIgnoredDuringExecution:
-        nodeSelectorTerms:
-        - matchExpressions:
-          - key: kubernetes.azure.com/mode
-            operator: In
-            values:
-            - user
-    podAntiAffinity:
-      preferredDuringSchedulingIgnoredDuringExecution:
-      - weight: 100
-        podAffinityTerm:
-          labelSelector:
-            matchLabels:
-              aadpodidbinding: testit-pod-identity
-          namespaces: ["testit"]
-          topologyKey: topology.kubernetes.io/zone
