--- a/charts/microservice-chart/templates/configmap.yaml
+++ b/charts/microservice-chart/templates/configmap.yaml
@@ -13,14 +13,18 @@ data:
   {{- toYaml (mergeOverwrite .Values.envConfig .Values.canaryDelivery.envConfig) | nindent 2 }}
   {{- end }}
   {{- if .Values.configMapFromFile -}}
-  {{- toYaml .Values.configMapFromFile | nindent 2 }}
+  {{- range $key, $value := .Values.configMapFromFile }}
+  {{ $key }}: {{ $value | quote }}
+  {{- end }}
   {{- end }}
   {{- else }}
   {{- if .Values.envConfig -}}
   {{- toYaml .Values.envConfig | nindent 2 }}
   {{- end }}
   {{- if .Values.configMapFromFile -}}
-  {{- toYaml .Values.configMapFromFile | nindent 2 }}
+  {{- range $key, $value := .Values.configMapFromFile }}
+  {{ $key }}: {{ $value | quote }}
+  {{- end }}
   {{- end }}
   {{- end }}
 {{- end }}
