--- a/charts/microservice-chart/templates/configmap.yaml
+++ b/charts/microservice-chart/templates/configmap.yaml
@@ -15,14 +15,16 @@ data:
   {{- if .Values.configMapFromFile -}}
   {{- range $key, $value := .Values.configMapFromFile }}
   {{ $key }}: {{ $value | quote }}
-  {{- end }}  {{- end }}
+  {{- end }}
+  {{- end }}
   {{- else }}
   {{- if .Values.envConfig -}}
   {{- toYaml .Values.envConfig | nindent 2 }}
   {{- end }}
+  {{- if .Values.configMapFromFile -}}
   {{- range $key, $value := .Values.configMapFromFile }}
   {{ $key }}: {{ $value | quote }}
-  {{- end }}  {{- toYaml .Values.configMapFromFile | nindent 2 }}
+  {{- end }}
   {{- end }}
   {{- end }}
 {{- end }}
